fix overflow when resizing, major progress :)

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   background-color: #1F2937;
   padding: 20px 350px;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
 }
 /* header */
 .header {
@@ -59,13 +59,17 @@ body {
   font-size: 48px;
   font-weight: 700;
   color: #F9FAF8;
+  flex: 1 1 auto;
 }
 .hero-secondary {
   font-size: 18px;
   color: #E5E7EB;
   padding: 10px 0px;
+  flex: 1 1 auto;
 }
 .hero-image {
+  min-width: 250px;
+  min-height: 100px;
   color: #E5E7EB;
   display: flex;
   flex: 0 1 auto;
@@ -77,7 +81,7 @@ body {
 }
 .hero button {
   color: #F9FAF8;
-  flex: 0 1 auto;
+  flex: 0 6 auto;
   background-color: #3882F6;
   border-radius: 5px;
   width: 125px;
@@ -85,6 +89,7 @@ body {
   border-color: #3882F6;
   font-size: 18px;
   font-weight: bold;
+  flex: 0 1 auto;
 }
 /* info section */
 .info-sect {
